-- Version 2.21.4, released 26-11-2023

 * Bug fix: fix a scripting error that occurred when creating filters

-- Version 2.21.3, released 20-10-2023

 * Check more thoroughly for incompatible blocks before Exporting in Minecraft 1.2 - 1.12 format, to try and prevent errors later in the Export
 * Bug fix: fix an error in the block compatibility check that was causing errors on Export when certain layer types were present

-- Version 2.21.2, released 20-10-2023

 * Make it slightly easier again to pick a solid colour for custom layers
 * Add support for schem files that were generating an error because they have a null value in their palette
 * Upgrade the installer to prevent an issue with dark mode on Macs
 * Bug fix: fix an error when importing masks at other than 100% scale
 * Bug fix: remove duplicate layers when loading .world files
 * Bug fix: eliminate several classes of errors that occurred when activating the eyedropper when it was already active - the selection is now cancelled instead
 * Bug fix: implement support for supporting floating cement blocks during post processing of Minecraft 1.12 maps
 * Various small bug fixes

-- Version 2.21.1, released 21-8-2023

 * Bug fix: make heightmap preview and tile selection work again
 * Bug fix: make selecting variations of biomes work again

-- Version 2.21.0, released 20-8-2023

 * Support for Minecraft 1.20 has been added, including:
   + Preview support for the new blocks by upgrading the embedded Dynmap to version 3.6
   + New plants for the Custom Plants layer: cherry saplings, pink petals, pitcher pods and plants and torchflower seeds and plants
   + The new Cherry Grove biome
   + Suspicious sand and gravel are Imported as sand and gravel, and are preserved on Merge
 * Custom Biomes can now also have custom patterns configured for rendering
   + To create or edit a pattern, click on the [...] button next to the Paint label on the Configure Custom Biome screen